img library & delete

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header ">
   <div class="header__container">
     <!-- DARKMODE -->
     <div class="header__content header--btndark">
@@ -23,8 +23,8 @@
         Filmoteka
       </a>
       <nav class="header__nav">
-        <a class="nav__item menu" href="#" data-value="search">Home</a>
-        <a class="nav__item menu" href="#" data-value="library">My Library</a>
+        <a class="nav__item menu home" href="#" data-value="search">Home</a>
+        <a class="nav__item menu library" href="#" data-value="library">My Library</a>
       </nav>
     </div> 
 
