--- a/src/sass/utils/_colors.scss
+++ b/src/sass/utils/_colors.scss
@@ -1,4 +1,7 @@
 :root {
+  //  background images
+  --header-image: url('/src/images/hdr-img.png');
+  --header-library: url('/src/images/hdr-library.png');
   // background colors
 
   --background-color: #ffffff;
@@ -28,55 +31,53 @@
 
   // individual colors of components
 
-  --loader-line:#ebe4e4;
-  
-  --header-image: url(/src/images/hdr-img.png);
+  --loader-line: #ebe4e4;
+
+  // --header-image: url(/src/images/hdr-img.png);
+
   --header-color: #000000;
   --footer-image: #f0efef;
-  
-  // svg colorsss 
-  
-  --film-color:#818181;
-  
+
+  // svg colorsss
+
+  --film-color: #818181;
 }
 
 .darkmode {
-    // background colors
-    
-    --background-color-c: #e5e5e5;
-    --background-color: #3b3b3b;
-    
-    // colors
-    
-    --color-black: #00000f;
-    --color-white: #ffffff;
-    
-    // text colors
-    
-    --text-color: #fdfdfd;
-    --text-color-contrast: #131212;
-    
-    // box shadows
+  // background colors
 
-    --box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.06),
+  --background-color-c: #e5e5e5;
+  --background-color: #3b3b3b;
+
+  // colors
+
+  --color-black: #00000f;
+  --color-white: #ffffff;
+
+  // text colors
+
+  --text-color: #fdfdfd;
+  --text-color-contrast: #131212;
+
+  // box shadows
+
+  --box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
-    
-    // hovers
-    
-    // butons colors
-    
-    --background-button-d: #f0d9cc;
-    --button-color: #ff6b08;
-    
-    // individual colors of components
-    
-    --loader-line:#000000;
-    
-    --header-image: url(/src/images/hdr-img.png);
-    --header-color: #000000;
-    --footer-image: url(/src/images/footer-img.png);
-    
-    // svg colorsss 
-    
-    --film-color:#ff6b08;
+
+  // hovers
+
+  // butons colors
+
+  --background-button-d: #f0d9cc;
+  --button-color: #ff6b08;
+
+  // individual colors of components
+
+  --loader-line: #000000;
+  --footer-image: url(/src/images/footer-img.png);
+  --header-color: #000000;
+
+  // svg colorsss
+
+  --film-color: #ff6b08;
 }
