--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -60,6 +60,7 @@
 }
 
 .logo {
+  display: block;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
@@ -127,13 +128,16 @@
   .header {
     &__container {
       display: flex;
+      flex-direction: column;
 
-      width: 768px;
+      width: 100%;
       height: 100%;
 
-      margin-left: auto;
-      margin-right: auto;
+      margin: 0 auto;
     }
+  }
+  .logo {
+    font-size: 0;
   }
 }
 
@@ -143,5 +147,8 @@
     &__container {
       min-width: 320px;
     }
+  }
+  .logo {
+    font-size: 0;
   }
 }
