--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,8 +13,8 @@
     </div>
 
     <div class="header__content header--nav">
-      <a class="nav__item logo" href="#" data-value="search">
-        <svg width="24px" height="24px" data-value="search">
+      <a class="nav__item logo" href="#" data-value="none">
+        <svg width="24px" height="24px" data-value="none">
           <use
             href="./images/svg-content.svg#Film_Svg"
             data-value="search"
