--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -42,6 +42,7 @@
   &--library {
     display: flex;
     gap: 20px;
+    justify-content: center;
   }
 }
 .header-home {
@@ -129,6 +130,7 @@
     &__container {
       display: flex;
       flex-direction: column;
+      align-items: center;
       width: 100%;
       height: 100%;
 
@@ -141,13 +143,38 @@
 }
 
 // MOBILE ⬇️⬇️
-@media (min-width: 320px) and (max-width: 767px) {
+@media (min-width: 300px) and (max-width: 767px) {
   .header {
+    padding: 58px 5%;
+    
     &__container {
-      min-width: 320px;
+      margin: 0 auto;
+      min-width: 300px;
+    }
+    &--search {
+      width: 100%;
+      min-width: 50%;
+      border-bottom: 0.5px solid var(--color-white);
+    }
+    &--nav {
+      width: auto;
+      display: flex;
+      flex-direction: row;
+      gap: 0px;
+      justify-content: space-between;
+      align-items: center;
+      padding: 5% 0% ;
+      margin-bottom: 35px;
     }
   }
   .logo {
     font-size: 0;
+  }
+  
+  .input__search {
+    background: inherit;
+    border: none;
+    width: calc(100% - 20px);
+    color: var(--color-white);
   }
 }
