se muestran las primeras 20 peliculas en el body

--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,5 +1,6 @@
-<article class="main">
-    <div class="container">
-
+<article class="body-movies">
+    <div class="cardsMovie">
+      HOLA
       </div>
+      <script type="module" src="./components/body.js"></script>
 </article>
