Se dan estilos a las tarjetas de las peliculas del body

--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,6 +1,5 @@
 <article class="body-movies">
-    <div class="cardsMovie">
-      HOLA
-      </div>
+    <ul class="cardsMovie"></ul>
+    
       <script type="module" src="./components/body.js"></script>
 </article>
