--- a/src/components/bodyStyles.scss
+++ b/src/components/bodyStyles.scss
@@ -1,13 +1,21 @@
 @import '../sass/utils/colors';
 
 .body-movies{
-    
+    padding: 0 3rem;
+    margin: 60px 0px 50px 0px;
 }
 
 .cardsMovie{
-    background-color: rosybrown;
+    background-color: var(--background-color);
+    margin: 0 auto;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 2rem;
     &__image{
-        width: 27.4rem;
-        height: 39.8rem;
+        width: 17.38rem;
+        height: 24.9rem;
+        border-radius: 5px;
     }
 }
