--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,11 @@
 <article class="footer">
     <div class="footer__container">
-        <h3>footer</h3>
+      <p class="footer__copyright">
+        &copy; 2020 | All Rights Reserved |<br> Developed with
+        <svg width="14" height="13">
+          <use href="/src/images/svg-content.svg#Heart_Svg"></use>
+        </svg>
+        <br> by <span data-modal-open>GoIT Students | team: "Hadrons"</span>
+      </p>
     </div>
-</article>
+  </article>
