--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -4,7 +4,9 @@
 // componentes
 @import './components/header';
 @import './components/footer';
+@import './components/modal-footer';
 @import './components/drk-md-btn';
+
 
 @import '~node_modules/modern-normalize/modern-normalize.css';
 
