--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,8 +5,8 @@
       <div class="BtnDark">
         <input type="checkbox" class="Darkbutton" id="checkbox" />
         <label for="checkbox" class="Darkbutton-label">
-          <i class="fas fa-moon"></i>
-          <i class="fas fa-sun"></i>
+          <!-- <i class="fas fa-moon"></i>
+          <i class="fas fa-sun"></i> -->
           <span class="ball"></span>
         </label>
       </div>
