--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,6 +1,6 @@
 // @import './components/loader';
 @import './utils/colors';
-@import './utils/';
+@import './utils/animations';
 
 // componentes
 @import './components/header';
