--- a/src/sass/utils/_colors.scss
+++ b/src/sass/utils/_colors.scss
@@ -31,6 +31,7 @@
 
   // individual colors of components
 
+  --card-color:#f5f3f3b0;
   --loader-line: #ebe4e4;
 
   // --header-image: url(/src/images/hdr-img.png);
@@ -73,6 +74,7 @@
 
   // individual colors of components
 
+  --card-color:#535353;
   --loader-line: #000000;
   --footer-image: url(/src/images/footer-img.png);
   --header-color: #000000;
