--- a/src/sass/components/_modal-footer.scss
+++ b/src/sass/components/_modal-footer.scss
@@ -58,6 +58,8 @@
     border-radius: 50%;
     border: 1px solid transparent;
     transition: all ease-in-out 0.2s;
+
+    stroke: var(--text-color);
   }
 
   & svg:hover {
@@ -78,7 +80,7 @@
     margin-left: 10px;
     margin-top: 10px;
 
-    background-color: #f7f7f7;
+    background-color: var(--card-color);
     text-align: center;
     overflow: hidden;
     border-radius: 4px;
