--- a/src/sass/components/_modal-footer.scss
+++ b/src/sass/components/_modal-footer.scss
@@ -229,6 +229,7 @@
 @media (min-width: 768px) and (max-width: 1023px) {
   .modal__footer {
     &-card {
+      padding: 30px 0 250px;
       width: 102px;
       height: 245px;
     }
