--- a/src/components/bodyStyles.scss
+++ b/src/components/bodyStyles.scss
@@ -1,21 +1,30 @@
 @import '../sass/utils/colors';
 
-.body-movies{
-    padding: 0 3rem;
-    margin: 60px 0px 50px 0px;
+.body-movies {
+  padding: 0 3rem;
+  margin: 60px 0px 50px 0px;
 }
 
-.cardsMovie{
-    background-color: var(--background-color);
-    margin: 0 auto;
-    padding: 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 2rem;
-    &__image{
-        width: 17.38rem;
-        height: 24.9rem;
-        border-radius: 5px;
-    }
+.cardsMovie {
+  background-color: var(--background-color);
+  margin: 0 auto;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2rem;
+  &__image {
+    width: 17.38rem;
+    height: 24.9rem;
+    border-radius: 5px;
+  }
+}
+.movie-card {
+  width: 17.38rem;
+  border-radius: 5px;
+
+  &:hover,
+  &:focus {
+    box-shadow: 2px 2px 10px #7e7e7e;
+  }
 }
