--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -30,16 +30,20 @@
     </div> 
 
     <div class="header__content header--search">
-      <input
+      <form action="" class="search-form">
+        <input
         class="input__search"
         type="text"
         name="search"
         id="search"
         placeholder="Movie Search"
-      />
-      <svg width="12" height="12">
-        <use href="./images/svg-content.svg#Search_Svg"></use>  
-      </svg>  
+        />
+        <button type="submit" class="input__btn">
+          <svg width="12" height="12">
+            <use href="./images/svg-content.svg#Search_Svg"></use>  
+          </svg>  
+        </button>
+      </form>
     </div>
 
     <div class="header__content header--library">
