--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -44,6 +44,18 @@
     gap: 20px;
     justify-content: center;
   }
+
+  &__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    max-width: 1000px;
+    height: 100%;
+
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 .header-home {
   background-image: var(--header-image);
@@ -71,11 +83,22 @@
   text-transform: uppercase;
 }
 
-.input__search {
-  background: inherit;
-  border: none;
-  width: calc(100% - 20px);
-  color: var(--color-white);
+.input {
+  &__search {
+    background: inherit;
+    border: none;
+    width: calc(307px);
+    color: var(--color-white);
+  }
+  &__search:hover,
+  &__search:focus {
+    border: none;
+    background: inherit;
+  }
+  &__btn {
+    background: inherit;
+    border: none;
+  }
 }
 
 .library__btn {
@@ -99,6 +122,30 @@
 }
 .active {
   border-bottom: 3px solid var(--button-color);
+}
+
+.movie {
+  &__title,
+  &__genre{
+    padding-left: 10px;
+    font-family: 'Roboto';
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+  }
+  &__title {
+    text-transform: uppercase;
+  }
+  &__genre {
+    color: #FF6B08;
+  }
+  &__popular{
+    background-color: #FF6B08;
+    color: #FFF;
+    padding: 1px 3px;
+    margin-left: 5px;
+    border-radius: 3px;
+  }
 }
 
 // DESKTOP ⬇️⬇️
@@ -125,56 +172,43 @@
 }
 
 // TABLET ⬇️⬇️
-@media (min-width: 768px) and (max-width: 1023px) {
-  .header {
-    &__container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 100%;
-      height: 100%;
+// @media (min-width: 768px) and (max-width: 1023px) {
+//   .header {
+//     &__container {
+//       display: flex;
+//       flex-direction: column;
+//       align-items: center;
+//       width: 100%;
+//       height: 100%;
 
-      margin: 0 auto;
-    }
-  }
-  .logo {
-    font-size: 0;
-  }
-}
+//       margin: 0 auto;
+//     }
+//   }
+//   .logo {
+//     font-size: 0;
+//   }
+// }
 
 // MOBILE ⬇️⬇️
 @media (min-width: 300px) and (max-width: 767px) {
   .header {
-    padding: 58px 5%;
-    
-    &__container {
-      margin: 0 auto;
-      min-width: 300px;
-    }
-    &--search {
-      width: 100%;
-      min-width: 50%;
-      border-bottom: 0.5px solid var(--color-white);
-    }
-    &--nav {
-      width: auto;
+    padding: 58px 20px 0px;
+
+    &__nav {
       display: flex;
-      flex-direction: row;
-      gap: 0px;
-      justify-content: space-between;
-      align-items: center;
-      padding: 5% 0% ;
-      margin-bottom: 35px;
+      gap: 30px;
+    }
+
+    &--search {
+      width: 280px;
+    }
+  }
+  .input{
+    &__search{
+      width: 251px;
     }
   }
   .logo {
     font-size: 0;
-  }
-  
-  .input__search {
-    background: inherit;
-    border: none;
-    width: calc(100% - 20px);
-    color: var(--color-white);
   }
 }
