add function filmoteka logo

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -14,7 +14,7 @@
 
     <div class="header__content header--nav">
 
-      <a class="nav__item logo" href="#" data-value="searched">
+      <a class="nav__item logo" href="#" data-value="searched" onClick="refreshPage()">
         <svg width="24px" height="24px" data-value="searched">
           <use
             href="./images/svg-content.svg#Film_Svg"
