--- a/src/components/bodyStyles.scss
+++ b/src/components/bodyStyles.scss
@@ -11,8 +11,9 @@
   padding: 0;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  gap: 2rem;
+  justify-content: space-between;
+  gap: 3.5rem;
+  width: auto;
   &__image {
     width: 17.38rem;
     height: 24.9rem;
@@ -22,9 +23,48 @@
 .movie-card {
   width: 17.38rem;
   border-radius: 5px;
+  background-color: var(--card-color);
+  transition: all 150ms ease-in;
 
   &:hover,
   &:focus {
-    box-shadow: 2px 2px 10px #7e7e7e;
+    cursor: pointer;
+    box-shadow: var(--box-shadow);
+    transition: all 150ms ease-out;
+  }
+}
+@media (min-width: 300px) and (max-width: 767px) {
+  .movie-card {
+    flex-basis: calc(100%);
+  }
+  .cardsMovie{
+    &__image{
+      width: 100%;
+      height: 40vh;
+      justify-content: center;
+    object-fit: cover;
+    }
+
+  }
+  .movie{
+    &__genre{
+      font-size: 3vw;
+      min-width: 50vw;
+      font-size-adjust: initial;
+      line-height: 20px;
+    }
+    &__title{
+      font-size: 3vw;
+      line-height: 25px;
+      word-spacing: 1px;
+      width: auto;
+      height: auto;
+    }
+  }
+
+  .body-movies {
+    display:flex;
+    padding: 1rem;
+    margin: 70px 10px;
   }
 }
