--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,5 +1,9 @@
 <article class="body-movies">
-    <ul class="cardsMovie"></ul>
+<div class="container">
+  <ul class="cardsMovie">
+
+  </ul>
+</div>
     
       <script type="module" src="./components/body.js"></script>
 </article>
