--- a/src/sass/utils/_colors.scss
+++ b/src/sass/utils/_colors.scss
@@ -30,12 +30,13 @@
   --button-color: #ff6b08;
 
   // individual colors of components
-
-  --card-color:#f5f3f3b0;
+  
+  --card-color:#f7f6f6d0;
+  --search-color:#00000005;
   --loader-line: #ebe4e4;
 
   // --header-image: url(/src/images/hdr-img.png);
-
+  
   --header-color: #000000;
   --footer-image: #f0efef;
 
@@ -48,7 +49,7 @@
   // background colors
 
   --background-color-c: #e5e5e5;
-  --background-color: #3b3b3b;
+  --background-color: #2c2b2b;
 
   // colors
 
@@ -74,7 +75,8 @@
 
   // individual colors of components
 
-  --card-color:#535353;
+  --card-color:#3b3a3ae8;
+  --search-color:#00000023;
   --loader-line: #000000;
   --footer-image: url(/src/images/footer-img.png);
   --header-color: #000000;
