--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -135,9 +135,11 @@
     line-height: 10px;
   }
   &__title {
+    line-height: 8px;
     text-transform: uppercase;
   }
   &__genre {
+    line-height: 18px;
     color: #FF6B08;
   }
   &__popular{
