add button to top

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,6 +3,7 @@
 @import './utils/animations';
 
 // componentes
+@import './components/btn-to-top';
 @import './components/header';
 @import './components/footer';
 @import './components/modal-footer';
