--- a/src/sass/utils/_colors.scss
+++ b/src/sass/utils/_colors.scss
@@ -28,13 +28,14 @@
 
   --background-button-d: #773204;
   --button-color: #ff6b08;
+  --button-color--hvr: #816d53;
 
   // individual colors of components
   
   --card-color:#f7f6f6d0;
   --search-color:#00000005;
   --loader-line: #ebe4e4;
-
+  
   // --header-image: url(/src/images/hdr-img.png);
   
   --header-color: #000000;
@@ -72,6 +73,7 @@
 
   --background-button-d: #f0d9cc;
   --button-color: #ff6b08;
+  --button-color--hvr: #886d5b;
 
   // individual colors of components
 
