--- a/src/sass/utils/_colors.scss
+++ b/src/sass/utils/_colors.scss
@@ -32,7 +32,7 @@
 
   // individual colors of components
   
-  --card-color:#f7f6f6d0;
+  --card-color:#f7f6f6;
   --search-color:#00000005;
   --loader-line: #ebe4e4;
   
@@ -77,7 +77,7 @@
 
   // individual colors of components
 
-  --card-color:#3b3a3ae8;
+  --card-color:#3b3a3a;
   --search-color:#00000023;
   --loader-line: #000000;
   --footer-image: url(/src/images/footer-img.png);
