Se acutaliza la paginacion y los estilos del body en un solo un archivo (body.js)

--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -11,7 +11,7 @@
   
   </div>
       
-        <script type="module" src="./components/body.js"></script>
-        <script  type="module"  src="./components/pagination.js"></script>
+        <script  src="./components/body.js"></script>
+        <script    src="./components/pagination.js"></script>
   
   </article>
