--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -11,7 +11,7 @@
   
   </div>
       
-        <script  src="./components/body.js"></script>
-        <script    src="./components/pagination.js"></script>
+        <script src="./components/body.js" type="module"></script>
+        <script src="./components/pagination.js"></script>
   
   </article>
