--- a/src/components/bodyStyles.scss
+++ b/src/components/bodyStyles.scss
@@ -1,6 +1,7 @@
 @import '../sass/utils/colors';
 
-.body-movies {
+.body-movies,
+.movielist {
   padding: 0 3rem;
   margin: 60px 0px 50px 0px;
 }
@@ -37,23 +38,22 @@
   .movie-card {
     flex-basis: calc(100%);
   }
-  .cardsMovie{
-    &__image{
+  .cardsMovie {
+    &__image {
       width: 100%;
       height: 40vh;
       justify-content: center;
-    object-fit: cover;
+      object-fit: cover;
     }
-
   }
-  .movie{
-    &__genre{
+  .movie {
+    &__genre {
       font-size: 3vw;
       min-width: 50vw;
       font-size-adjust: initial;
       line-height: 20px;
     }
-    &__title{
+    &__title {
       font-size: 3vw;
       line-height: 25px;
       word-spacing: 1px;
@@ -62,8 +62,9 @@
     }
   }
 
-  .body-movies {
-    display:flex;
+  .body-movies,
+  .movielist {
+    display: flex;
     padding: 1rem;
     margin: 70px 10px;
   }
