--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header ">
+<header class="header">
   <div class="header__container">
     <!-- DARKMODE -->
     <div class="header__content header--btndark">
@@ -6,15 +6,19 @@
         <input type="checkbox" class="Darkbutton" id="checkbox" />
         <label for="checkbox" class="Darkbutton-label">
           <!-- <i class="fas fa-moon"></i>
-          <i class="fas fa-sun"></i> --> 
+          <i class="fas fa-sun"></i> -->
           <span class="ball"></span>
         </label>
       </div>
-    </div>  
- 
-    <div class="header__content header--nav">
+    </div>
 
-      <a class="nav__item logo" href="#" data-value="searched" onClick="refreshPage()">
+    <div class="header__content header--nav">
+      <a
+        class="nav__item logo"
+        href="#"
+        data-value="searched"
+        onClick="refreshPage()"
+      >
         <svg width="24px" height="24px" data-value="searched">
           <use
             href="./images/svg-content.svg#Film_Svg"
@@ -22,33 +26,35 @@
           ></use>
         </svg>
         Filmoteka
-      </a> 
+      </a>
       <nav class="header__nav">
         <a class="nav__item menu home" href="#" data-value="search">Home</a>
-        <a class="nav__item menu library" href="#" data-value="library">My Library</a>
+        <a class="nav__item menu library" href="#" data-value="library"
+          >My Library</a
+        >
       </nav>
-    </div> 
+    </div>
 
     <div class="header__content header--search">
       <form action="" class="search-form">
         <input
-        class="input__search"
-        type="text"
-        name="search"
-        id="search"
-        placeholder="Movie Search"
+          class="input__search"
+          type="text"
+          name="search"
+          id="search"
+          placeholder="Movie Search"
         />
         <button type="submit" class="input__btn">
           <svg width="12" height="12">
-            <use href="./images/svg-content.svg#Search_Svg"></use>  
-          </svg>  
+            <use href="./images/svg-content.svg#Search_Svg"></use>
+          </svg>
         </button>
       </form>
     </div>
 
     <div class="header__content header--library">
-      <button class="library__btn">Watched</button>
-      <button class="library__btn">queue</button>
-    </div>   
+      <button class="library__btn header__watched">Watched</button>
+      <button class="library__btn header__queue">queue</button>
+    </div>
   </div>
 </header>
