--- a/src/partials/modal-poster.html
+++ b/src/partials/modal-poster.html
@@ -1,16 +1,34 @@
 <article>
-    <div class="modal fade" id="posterModal" tabindex="-1" role="dialog" aria-hidden="true" >
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" id="clearModal" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">x</span>
-                </button>
-            </div>
-            <div class="modal-body">
-            </div>
-
-          </div>
+  <div
+    class="modal fade"
+    id="posterModal"
+    tabindex="-1"
+    role="dialog"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button
+            type="button"
+            id="clearModal"
+            class="close"
+            data-dismiss="modal"
+            aria-label="Close"
+          >
+            <span aria-hidden="true">x</span>
+          </button>
+        </div>
+        <div class="modal-body"></div>
+        <div class="">
+          <button class="library__btn library__btn--modal modal-watched">
+            Watched
+          </button>
+          <button class="library__btn library__btn--modal modal-queue">
+            queue
+          </button>
         </div>
       </div>
+    </div>
+  </div>
 </article>
