--- a/src/sass/components/_modal-body.scss
+++ b/src/sass/components/_modal-body.scss
@@ -163,8 +163,17 @@
     border: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: 0.3rem;
     outline: 0;
+  
   }
   
+  .movie__About{
+
+    display: none;
+  }
+
+  .About__show{
+    display: block;
+  }
   .modal-backdrop {
     position: fixed;
     top: 0;
