--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -5,6 +5,7 @@
 // componentes
 @import './components/btn-to-top';
 @import './components/header';
+@import './components/bodyStyles';
 @import './components/footer';
 @import './components/modal-footer';
 @import './components/modal-body';
