--- a/src/sass/components/_bodyStyles.scss
+++ b/src/sass/components/_bodyStyles.scss
@@ -18,6 +18,7 @@
   justify-content: center;
   align-items: center;
   gap: 2rem;
+  padding: 0;
   // width: auto;
   &__image {
     width: 17.38rem;
@@ -69,8 +70,8 @@
   .body-movies,
   .movielist {
     display: flex;
-    padding: 1rem;
-    margin: 70px 10px;
+    padding: 0;
+    margin: 0 auto;
   }
 }
 
